--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
         .hero {
             position: relative;
             height: 600px;
-            background: linear-gradient(135deg, #d4541e 0%, #b8421a 50%, #8b3214 100%);
+            background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+                url('hero_italian.png') center/cover;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -628,8 +629,7 @@
             <!-- Lasagna Recipe -->
             <div class="recipe-card">
                 <div style="position: relative;">
-                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='800' height='600'%3E%3Cdefs%3E%3ClinearGradient id='grad' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%23d4541e;stop-opacity:1' /%3E%3Cstop offset='100%25' style='stop-color:%238b3214;stop-opacity:1' /%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='800' height='600' fill='url(%23grad)'/%3E%3Ctext x='50%25' y='50%25' font-family='Arial, sans-serif' font-size='48' fill='white' text-anchor='middle' dominant-baseline='middle' opacity='0.7'%3ELasagna%3C/text%3E%3C/svg%3E" alt="Lasagna"
-                        class="recipe-image">
+                    <img src="lasagna.png" alt="Lasagna" class="recipe-image">
                     <div class="recipe-badge">Classic</div>
                 </div>
                 <div class="recipe-content">
