Remove educational sample text from footer

--- a/index.html
+++ b/index.html
@@ -614,73 +614,74 @@
 
                     <div class="recipe-details">
                         <div class="time-info">
-                        <div class="time-item">
-                            <span class="time-label lang-content active" data-lang="ko">준비</span>
-                            <span class="time-label lang-content" data-lang="en">Prep</span>
-                            <span class="time-value">5 min</span>
+                            <div class="time-item">
+                                <span class="time-label lang-content active" data-lang="ko">준비</span>
+                                <span class="time-label lang-content" data-lang="en">Prep</span>
+                                <span class="time-value">5 min</span>
+                            </div>
+                            <div class="time-item">
+                                <span class="time-label lang-content active" data-lang="ko">조리</span>
+                                <span class="time-label lang-content" data-lang="en">Cook</span>
+                                <span class="time-value">15 min</span>
+                            </div>
+                            <div class="time-item">
+                                <span class="time-label lang-content active" data-lang="ko">인분</span>
+                                <span class="time-label lang-content" data-lang="en">Servings</span>
+                                <span class="time-value">2</span>
+                            </div>
                         </div>
-                        <div class="time-item">
-                            <span class="time-label lang-content active" data-lang="ko">조리</span>
-                            <span class="time-label lang-content" data-lang="en">Cook</span>
-                            <span class="time-value">15 min</span>
+
+                        <div class="recipe-section">
+                            <h3 class="section-title lang-content active" data-lang="ko">재료</h3>
+                            <h3 class="section-title lang-content" data-lang="en">Ingredients</h3>
+
+                            <ul class="ingredients-list lang-content active" data-lang="ko">
+                                <li>스파게티 200g</li>
+                                <li>마늘 6쪽 (얇게 슬라이스)</li>
+                                <li>올리브 오일 1/2컵</li>
+                                <li>페페론치노 (고추) 1-2개</li>
+                                <li>파슬리 다진 것 2큰술</li>
+                                <li>소금, 후추 적당량</li>
+                                <li>파르메산 치즈 (선택사항)</li>
+                            </ul>
+
+                            <ul class="ingredients-list lang-content" data-lang="en">
+                                <li>200g Spaghetti</li>
+                                <li>6 Garlic cloves (thinly sliced)</li>
+                                <li>1/2 cup Olive oil</li>
+                                <li>1-2 Red chili peppers</li>
+                                <li>2 tbsp Fresh parsley (chopped)</li>
+                                <li>Salt and pepper to taste</li>
+                                <li>Parmesan cheese (optional)</li>
+                            </ul>
                         </div>
-                        <div class="time-item">
-                            <span class="time-label lang-content active" data-lang="ko">인분</span>
-                            <span class="time-label lang-content" data-lang="en">Servings</span>
-                            <span class="time-value">2</span>
+
+                        <div class="recipe-section">
+                            <h3 class="section-title lang-content active" data-lang="ko">조리법</h3>
+                            <h3 class="section-title lang-content" data-lang="en">Instructions</h3>
+
+                            <ol class="steps-list lang-content active" data-lang="ko">
+                                <li>큰 냄비에 물을 끓이고 소금을 넣어 스파게티를 삶습니다.</li>
+                                <li>팬에 올리브 오일을 두르고 약불에서 마늘을 천천히 볶습니다.</li>
+                                <li>마늘이 황금빛이 되면 페페론치노를 넣고 향을 냅니다.</li>
+                                <li>삶은 스파게티를 건져 팬에 넣고 면수 1/2컵을 추가합니다.</li>
+                                <li>파슬리를 넣고 잘 섞어줍니다.</li>
+                                <li>소금, 후추로 간을 맞추고 접시에 담아냅니다.</li>
+                                <li>원하면 파르메산 치즈를 뿌려 완성합니다.</li>
+                            </ol>
+
+                            <ol class="steps-list lang-content" data-lang="en">
+                                <li>Bring a large pot of salted water to boil and cook spaghetti according to package
+                                    directions.</li>
+                                <li>In a large pan, heat olive oil over low heat and slowly cook garlic until fragrant.
+                                </li>
+                                <li>When garlic turns golden, add chili peppers and cook for 1 minute.</li>
+                                <li>Add cooked spaghetti to the pan along with 1/2 cup pasta water.</li>
+                                <li>Toss in fresh parsley and mix well.</li>
+                                <li>Season with salt and pepper, then transfer to plates.</li>
+                                <li>Top with parmesan cheese if desired and serve immediately.</li>
+                            </ol>
                         </div>
-                    </div>
-
-                    <div class="recipe-section">
-                        <h3 class="section-title lang-content active" data-lang="ko">재료</h3>
-                        <h3 class="section-title lang-content" data-lang="en">Ingredients</h3>
-
-                        <ul class="ingredients-list lang-content active" data-lang="ko">
-                            <li>스파게티 200g</li>
-                            <li>마늘 6쪽 (얇게 슬라이스)</li>
-                            <li>올리브 오일 1/2컵</li>
-                            <li>페페론치노 (고추) 1-2개</li>
-                            <li>파슬리 다진 것 2큰술</li>
-                            <li>소금, 후추 적당량</li>
-                            <li>파르메산 치즈 (선택사항)</li>
-                        </ul>
-
-                        <ul class="ingredients-list lang-content" data-lang="en">
-                            <li>200g Spaghetti</li>
-                            <li>6 Garlic cloves (thinly sliced)</li>
-                            <li>1/2 cup Olive oil</li>
-                            <li>1-2 Red chili peppers</li>
-                            <li>2 tbsp Fresh parsley (chopped)</li>
-                            <li>Salt and pepper to taste</li>
-                            <li>Parmesan cheese (optional)</li>
-                        </ul>
-                    </div>
-
-                    <div class="recipe-section">
-                        <h3 class="section-title lang-content active" data-lang="ko">조리법</h3>
-                        <h3 class="section-title lang-content" data-lang="en">Instructions</h3>
-
-                        <ol class="steps-list lang-content active" data-lang="ko">
-                            <li>큰 냄비에 물을 끓이고 소금을 넣어 스파게티를 삶습니다.</li>
-                            <li>팬에 올리브 오일을 두르고 약불에서 마늘을 천천히 볶습니다.</li>
-                            <li>마늘이 황금빛이 되면 페페론치노를 넣고 향을 냅니다.</li>
-                            <li>삶은 스파게티를 건져 팬에 넣고 면수 1/2컵을 추가합니다.</li>
-                            <li>파슬리를 넣고 잘 섞어줍니다.</li>
-                            <li>소금, 후추로 간을 맞추고 접시에 담아냅니다.</li>
-                            <li>원하면 파르메산 치즈를 뿌려 완성합니다.</li>
-                        </ol>
-
-                        <ol class="steps-list lang-content" data-lang="en">
-                            <li>Bring a large pot of salted water to boil and cook spaghetti according to package
-                                directions.</li>
-                            <li>In a large pan, heat olive oil over low heat and slowly cook garlic until fragrant.</li>
-                            <li>When garlic turns golden, add chili peppers and cook for 1 minute.</li>
-                            <li>Add cooked spaghetti to the pan along with 1/2 cup pasta water.</li>
-                            <li>Toss in fresh parsley and mix well.</li>
-                            <li>Season with salt and pepper, then transfer to plates.</li>
-                            <li>Top with parmesan cheese if desired and serve immediately.</li>
-                        </ol>
-                    </div>
                     </div>
                 </div>
             </div>
@@ -699,90 +700,90 @@
 
                     <div class="recipe-details">
                         <div class="time-info">
-                        <div class="time-item">
-                            <span class="time-label lang-content active" data-lang="ko">준비</span>
-                            <span class="time-label lang-content" data-lang="en">Prep</span>
-                            <span class="time-value">30 min</span>
+                            <div class="time-item">
+                                <span class="time-label lang-content active" data-lang="ko">준비</span>
+                                <span class="time-label lang-content" data-lang="en">Prep</span>
+                                <span class="time-value">30 min</span>
+                            </div>
+                            <div class="time-item">
+                                <span class="time-label lang-content active" data-lang="ko">조리</span>
+                                <span class="time-label lang-content" data-lang="en">Cook</span>
+                                <span class="time-value">60 min</span>
+                            </div>
+                            <div class="time-item">
+                                <span class="time-label lang-content active" data-lang="ko">인분</span>
+                                <span class="time-label lang-content" data-lang="en">Servings</span>
+                                <span class="time-value">6-8</span>
+                            </div>
                         </div>
-                        <div class="time-item">
-                            <span class="time-label lang-content active" data-lang="ko">조리</span>
-                            <span class="time-label lang-content" data-lang="en">Cook</span>
-                            <span class="time-value">60 min</span>
+
+                        <div class="recipe-section">
+                            <h3 class="section-title lang-content active" data-lang="ko">재료</h3>
+                            <h3 class="section-title lang-content" data-lang="en">Ingredients</h3>
+
+                            <ul class="ingredients-list lang-content active" data-lang="ko">
+                                <li>라자냐 면 12장</li>
+                                <li>소고기 간 것 500g</li>
+                                <li>토마토 소스 800g</li>
+                                <li>리코타 치즈 500g</li>
+                                <li>모짜렐라 치즈 300g (갈아서)</li>
+                                <li>파르메산 치즈 100g</li>
+                                <li>양파 1개 (다진 것)</li>
+                                <li>마늘 3쪽 (다진 것)</li>
+                                <li>올리브 오일 2큰술</li>
+                                <li>바질, 오레가노 각 1작은술</li>
+                                <li>소금, 후추 적당량</li>
+                            </ul>
+
+                            <ul class="ingredients-list lang-content" data-lang="en">
+                                <li>12 Lasagna noodles</li>
+                                <li>500g Ground beef</li>
+                                <li>800g Tomato sauce</li>
+                                <li>500g Ricotta cheese</li>
+                                <li>300g Mozzarella cheese (shredded)</li>
+                                <li>100g Parmesan cheese</li>
+                                <li>1 Onion (diced)</li>
+                                <li>3 Garlic cloves (minced)</li>
+                                <li>2 tbsp Olive oil</li>
+                                <li>1 tsp each Basil and oregano</li>
+                                <li>Salt and pepper to taste</li>
+                            </ul>
                         </div>
-                        <div class="time-item">
-                            <span class="time-label lang-content active" data-lang="ko">인분</span>
-                            <span class="time-label lang-content" data-lang="en">Servings</span>
-                            <span class="time-value">6-8</span>
+
+                        <div class="recipe-section">
+                            <h3 class="section-title lang-content active" data-lang="ko">조리법</h3>
+                            <h3 class="section-title lang-content" data-lang="en">Instructions</h3>
+
+                            <ol class="steps-list lang-content active" data-lang="ko">
+                                <li>오븐을 180도로 예열합니다.</li>
+                                <li>팬에 올리브 오일을 두르고 양파와 마늘을 볶습니다.</li>
+                                <li>간 소고기를 넣고 갈색이 될 때까지 볶습니다.</li>
+                                <li>토마토 소스, 바질, 오레가노를 넣고 20분간 끓입니다.</li>
+                                <li>리코타 치즈에 계란 1개를 섞어 치즈 혼합물을 만듭니다.</li>
+                                <li>베이킹 팬에 소스를 얇게 깔고 라자냐 면을 올립니다.</li>
+                                <li>리코타 혼합물, 모짜렐라, 미트 소스 순으로 층을 만듭니다.</li>
+                                <li>이 과정을 3-4번 반복합니다.</li>
+                                <li>마지막에 파르메산 치즈를 뿌립니다.</li>
+                                <li>호일로 덮고 40분간 굽습니다.</li>
+                                <li>호일을 벗기고 15분 더 구워 치즈를 갈색으로 만듭니다.</li>
+                                <li>10분간 식힌 후 서빙합니다.</li>
+                            </ol>
+
+                            <ol class="steps-list lang-content" data-lang="en">
+                                <li>Preheat oven to 180°C (350°F).</li>
+                                <li>In a large pan, heat olive oil and sauté onion and garlic until softened.</li>
+                                <li>Add ground beef and cook until browned.</li>
+                                <li>Stir in tomato sauce, basil, and oregano. Simmer for 20 minutes.</li>
+                                <li>Mix ricotta cheese with 1 egg to create cheese mixture.</li>
+                                <li>Spread a thin layer of sauce in baking dish, then add lasagna noodles.</li>
+                                <li>Layer ricotta mixture, mozzarella, and meat sauce.</li>
+                                <li>Repeat layers 3-4 times.</li>
+                                <li>Top with parmesan cheese.</li>
+                                <li>Cover with foil and bake for 40 minutes.</li>
+                                <li>Remove foil and bake for 15 more minutes until cheese is golden.</li>
+                                <li>Let cool for 10 minutes before serving.</li>
+                            </ol>
                         </div>
-                    </div>
-
-                    <div class="recipe-section">
-                        <h3 class="section-title lang-content active" data-lang="ko">재료</h3>
-                        <h3 class="section-title lang-content" data-lang="en">Ingredients</h3>
-
-                        <ul class="ingredients-list lang-content active" data-lang="ko">
-                            <li>라자냐 면 12장</li>
-                            <li>소고기 간 것 500g</li>
-                            <li>토마토 소스 800g</li>
-                            <li>리코타 치즈 500g</li>
-                            <li>모짜렐라 치즈 300g (갈아서)</li>
-                            <li>파르메산 치즈 100g</li>
-                            <li>양파 1개 (다진 것)</li>
-                            <li>마늘 3쪽 (다진 것)</li>
-                            <li>올리브 오일 2큰술</li>
-                            <li>바질, 오레가노 각 1작은술</li>
-                            <li>소금, 후추 적당량</li>
-                        </ul>
-
-                        <ul class="ingredients-list lang-content" data-lang="en">
-                            <li>12 Lasagna noodles</li>
-                            <li>500g Ground beef</li>
-                            <li>800g Tomato sauce</li>
-                            <li>500g Ricotta cheese</li>
-                            <li>300g Mozzarella cheese (shredded)</li>
-                            <li>100g Parmesan cheese</li>
-                            <li>1 Onion (diced)</li>
-                            <li>3 Garlic cloves (minced)</li>
-                            <li>2 tbsp Olive oil</li>
-                            <li>1 tsp each Basil and oregano</li>
-                            <li>Salt and pepper to taste</li>
-                        </ul>
-                    </div>
-
-                    <div class="recipe-section">
-                        <h3 class="section-title lang-content active" data-lang="ko">조리법</h3>
-                        <h3 class="section-title lang-content" data-lang="en">Instructions</h3>
-
-                        <ol class="steps-list lang-content active" data-lang="ko">
-                            <li>오븐을 180도로 예열합니다.</li>
-                            <li>팬에 올리브 오일을 두르고 양파와 마늘을 볶습니다.</li>
-                            <li>간 소고기를 넣고 갈색이 될 때까지 볶습니다.</li>
-                            <li>토마토 소스, 바질, 오레가노를 넣고 20분간 끓입니다.</li>
-                            <li>리코타 치즈에 계란 1개를 섞어 치즈 혼합물을 만듭니다.</li>
-                            <li>베이킹 팬에 소스를 얇게 깔고 라자냐 면을 올립니다.</li>
-                            <li>리코타 혼합물, 모짜렐라, 미트 소스 순으로 층을 만듭니다.</li>
-                            <li>이 과정을 3-4번 반복합니다.</li>
-                            <li>마지막에 파르메산 치즈를 뿌립니다.</li>
-                            <li>호일로 덮고 40분간 굽습니다.</li>
-                            <li>호일을 벗기고 15분 더 구워 치즈를 갈색으로 만듭니다.</li>
-                            <li>10분간 식힌 후 서빙합니다.</li>
-                        </ol>
-
-                        <ol class="steps-list lang-content" data-lang="en">
-                            <li>Preheat oven to 180°C (350°F).</li>
-                            <li>In a large pan, heat olive oil and sauté onion and garlic until softened.</li>
-                            <li>Add ground beef and cook until browned.</li>
-                            <li>Stir in tomato sauce, basil, and oregano. Simmer for 20 minutes.</li>
-                            <li>Mix ricotta cheese with 1 egg to create cheese mixture.</li>
-                            <li>Spread a thin layer of sauce in baking dish, then add lasagna noodles.</li>
-                            <li>Layer ricotta mixture, mozzarella, and meat sauce.</li>
-                            <li>Repeat layers 3-4 times.</li>
-                            <li>Top with parmesan cheese.</li>
-                            <li>Cover with foil and bake for 40 minutes.</li>
-                            <li>Remove foil and bake for 15 more minutes until cheese is golden.</li>
-                            <li>Let cool for 10 minutes before serving.</li>
-                        </ol>
-                    </div>
                     </div>
                 </div>
             </div>
@@ -791,8 +792,8 @@
 
     <!-- Footer -->
     <footer>
-        <p class="lang-content active" data-lang="ko">교육 목적으로 제작된 샘플 웹사이트입니다.</p>
-        <p class="lang-content" data-lang="en">Sample website created for educational purposes.</p>
+        <p class="lang-content active" data-lang="ko">© 2025 Italian Recipes. 모든 권리 보유.</p>
+        <p class="lang-content" data-lang="en">© 2025 Italian Recipes. All rights reserved.</p>
         <p style="margin-top: 10px; font-size: 0.9rem; opacity: 0.7;">2025 Recipe Collection</p>
     </footer>
 
